<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:paddingHorizontal="32dp"
    android:paddingTop="8dp"
    tools:context=".ui.fragment.LocationPermissionFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/introFragmentTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/intro_fragment_title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/introFragmentSubtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/intro_fragment_subtitle"
        android:textDirection="rtl"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/introFragmentTitle" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/introFragmentDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/intro_fragment_description"
        android:textDirection="rtl"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/introFragmentSubtitle" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/intro_fragment_options_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/intro_fragment_options_title"
        android:textDirection="rtl"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/introFragmentDesc" />

    <RadioGroup
        android:id="@+id/introRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="end"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/intro_fragment_options_title">

        <RadioButton
            android:id="@+id/positive"
            android:gravity="center"
            android:button="@android:color/transparent"
            android:layout_width="match_parent"
            android:layoutDirection="rtl"
            android:layout_height="62dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/radio_button_intro"
            android:text="@string/intro_fragment_positive_button" />

        <RadioButton
            android:id="@+id/was_positive"
            android:gravity="center"
            android:button="@android:color/transparent"
            android:layout_width="match_parent"
            android:layoutDirection="rtl"
            android:layout_height="62dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/radio_button_intro"
            android:text="@string/intro_fragment_was_positive_button" />

        <RadioButton
            android:id="@+id/negative"
            android:gravity="center"
            android:button="@android:color/transparent"
            android:layout_width="match_parent"
            android:layoutDirection="rtl"
            android:layout_height="62dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/radio_button_intro"
            android:text="@string/intro_fragment_not_positive_button"
            />

    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/introFragmentNextButton"
        android:layout_width="0dp"
        android:layout_height="66dp"
        style="@style/IntroNextButtonStyle"
        android:layout_marginBottom="16dp"
        android:text="@string/intro_fragment_next_button"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
        android:textColor="@color/gray90"
        app:cornerRadius="@dimen/button_corner_radius"
        app:layout_constraintBottom_toBottomOf="@+id/main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
