<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_fragment_timeline_permission"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/locationPermissionTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/location_dialog_title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/locationPermissionDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/location_dialog_description"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/locationPermissionTitle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/givePermissionButton"
        android:layout_width="0dp"
        android:layout_height="66dp"
        android:layout_marginTop="32dp"
        android:text="@string/positive_location_permission_button"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
        android:textColor="@color/gray90"
        app:backgroundTint="@color/orange"
        app:cornerRadius="@dimen/button_corner_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationPermissionDescription" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/skipPermissionButton"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="66dp"
        android:layout_marginTop="8dp"
        android:text="@string/skip_location_permission_button"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
        android:textColor="@color/gray90"
        app:cornerRadius="@dimen/button_corner_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/givePermissionButton"
        app:strokeColor="@color/orange"
        app:strokeWidth="2dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
