<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/pale_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:padding="4dp"
            android:textColor="@color/dark_blue_grey"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="1/2" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/location_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:padding="4dp"
            android:textColor="@color/dark_blue_grey"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/page"
            tools:text="Tel Aviv, Sderot Bengurion 22" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/location_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:lineHeight="20sp"
            android:textColor="@color/dark_blue_grey"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/location_name"
            tools:text="10:15 - 10:30" />

        <ImageView
            android:id="@+id/arrow_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:src="@drawable/ic_left"
            app:layout_constraintBottom_toBottomOf="@+id/location_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/page" />


        <ImageView
            android:id="@+id/arrow_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:src="@drawable/ic_right"
            app:layout_constraintBottom_toBottomOf="@+id/location_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/page" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/title_explanation"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.1"
        android:lineSpacingExtra="8sp"
        android:text="@string/collision_explanation"
        android:textColor="@color/dark_blue_grey"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
        app:layout_constraintStart_toStartOf="@+id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@+id/top_container" />

    <TextView
        android:id="@+id/title_sub_explanation"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.05"
        android:layout_marginTop="8dp"
        android:text="@string/explanation_substring"
        android:textColor="@color/dark_blue_grey"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/button_health_authority"
        app:layout_constraintStart_toStartOf="@+id/button_mada"
        app:layout_constraintTop_toBottomOf="@+id/title_explanation" />


    <TextView
        android:id="@+id/secondary_title_explanation"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.05"
        android:layout_marginTop="16dp"
        android:lineSpacingExtra="8sp"
        android:text="@string/collision_secondary_explanation"
        android:textColor="@color/dark_blue_grey"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/button_health_authority"
        app:layout_constraintStart_toStartOf="@+id/button_mada"
        app:layout_constraintTop_toBottomOf="@+id/title_sub_explanation" />

    <TextView
        android:id="@+id/secondary_title_sub_explanation"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.1"
        android:layout_marginTop="8dp"
        android:lineSpacingExtra="8sp"
        android:text="@string/collision_secondary_sub_explanation"
        android:textColor="@color/dark_blue_grey"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/button_health_authority"
        app:layout_constraintStart_toStartOf="@+id/button_mada"
        app:layout_constraintTop_toBottomOf="@+id/secondary_title_explanation" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/button_mada"
        android:layout_width="151dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/button_orange_radius_2dp"
        android:gravity="center"
        android:minHeight="34dp"
        android:paddingStart="8dp"
        android:paddingTop="8dp"
        android:paddingEnd="8dp"
        android:paddingBottom="8dp"
        android:text="@string/call_101"
        android:textColor="@color/dark_blue_grey"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@id/secondary_title_sub_explanation" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/button_health_authority"
        android:layout_width="151dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/button_orange_radius_2dp"
        android:gravity="center"
        android:minHeight="34dp"
        android:paddingStart="8dp"
        android:paddingTop="8dp"
        android:paddingEnd="8dp"
        android:paddingBottom="8dp"
        android:text="@string/ministry_of_health"
        android:textColor="@color/dark_blue_grey"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
        app:layout_constraintTop_toBottomOf="@id/secondary_title_sub_explanation" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftGuideline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.03"
        android:orientation="vertical"
        app:layout_constraintGuide_end="391dp"
        app:layout_constraintHeight_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightGuideline"
        android:layout_width="0dp"
        app:layout_constraintGuide_percent="0.97"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
